[package]
name = "libworldgen"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.5"
itertools = "0.14.0"
utf16string = "0.2.0"
mcpackloader = { path = "../mcpackloader" }
md5 = "0.8.0"
jni = { version = "0.21.1", features = ["invocation"], optional = true }
hashbrown = { version = "0.15.4" }
image = { version = "0.25.6", features = [
    "rayon",
    "png",
], default-features = false }

[build-dependencies]
walkdir = "2.5.0"

[features]
default = []

java_tests_module = ["dep:jni"]
compile_java = []
java_tests = ["java_tests_module", "compile_java"]
