[package]
name = "mcpackloader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_platform = { version = "*", default-features = false, features = [
    "std",
], optional = true }
glam = { version = "*", default-features = false, optional = true }
hashbrown = { version = "0.15.4", features = ["serde"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
string-interner = "0.19.0"
thiserror = "2.0.12"

[features]
default = ["glam", "glam_std"]
glam = ["dep:glam"]
glam_std = ["glam/std"]
more_const = ["dep:bevy_platform"]
