[package]
name = "mcpackloader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_platform = { version = "*", default-features = false, features = [
    "std",
], optional = true }
glam = { version = "0.29", default-features = false, features = [
    "std",
], optional = true }
hashbrown = { version = "0.15.5", features = ["serde"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
string-interner = "0.19.0"
thiserror = "2.0.16"

[features]
default = ["glam"]
glam = ["dep:glam"]
more_const = ["dep:bevy_platform"]
