[package]
name = "worldgenpreview"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_framepace = "0.19.1"
bitflags = "2.9.1"
guillotiere = "0.6.2"
image = { version = "0.25.6", default-features = false }
mcpackloader = { path = "../mcpackloader", default-features = false, features = [
    "glam",
    "more_const",
] }
tracing = "0.1.41"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[features]
trace = ["bevy/trace_tracy"]
log_frametime = []
